--- a/templates/login.html
+++ b/templates/login.html
@@ -28,8 +28,16 @@
                 {% endif %}
             {% endif %}
 
-            <form method="post" action="{% url 'login' %}">
+            <form method="post" action="{% url 'user:login' %}" role="form" class="php-email-form" novalidate>
             {% csrf_token %}
+            <div class="form-group">
+                <label for="name">{{ form.username.label_tag }}</label>
+                {{ form.username }}
+              </div>
+              <div class="form-group">
+                <label for="name">Message</label>
+                <input type="text" class="form-control" name="subject" id="subject" required>
+              </div>
             <table>
             <tr>
                 <td>{{ form.username.label_tag }}</td>
@@ -37,7 +45,7 @@
             </tr>
             <tr>
                 <td>{{ form.password.label_tag }}</td>
-                <td>{{ form.password }}</td>
+                <td>{{ form.password  }}</td>
             </tr>
             </table>
 
