--- a/templates/login.html
+++ b/templates/login.html
@@ -1,27 +1,58 @@
 {% extends 'base.html' %}
+{% block style %}
+<style>
+  .email-form {
+    width: 100%;
+    border-top: 3px solid #47b2e4;
+    border-bottom: 3px solid #47b2e4;
+    padding: 30px;
+    background: #fff;
+    box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
+    padding-bottom: 8px;  
+  }
+  .email-form input, textarea{ 
+    border-radius: 0;
+    box-shadow: none;
+    font-size: 14px;
+    border-radius: 4px;
+    height: 37px;
+  }
+  .email-form .form-group {
+    margin-bottom: 10px;
+  }
 
+  .email-form .form-group label {
+    padding-bottom: 4px;
+  }
+  .btn {
+    height: 37px;
+  }
+</style>
+{% endblock style %}
 {% block hero %}{% endblock hero %}
 {% block navbar %}{% endblock navbar %}
 {% block content %}
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <section id="contact" class="contact ">
       <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
-          <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <div class="row d-flex justify-content-center">
+          <div class="section-title col-lg-5">
+            <h2>Se connecter</h2>
+            <p>Entre votre nom d'utilisateur et votre mot de passe pour vous connecter.</p>
+          </div>
         </div>
 
-        <div class="row">
+        <div class="row d-flex justify-content-center">
   
-          <div class="col-lg-6 mt-5 mt-lg-0 d-flex align-items-stretch"> 
-            <form method="post" action="{% url 'user:login' %}" role="form" class="php-email-form" novalidate>
+          <div class="col-md-4 d-flex align-items-stretch"> 
+            <form method="post" action="{% url 'user:login' %}" role="form" class="email-form" >
               {% csrf_token %}
               {% include 'layouts/form.html' with form=form %}
 
-              <input class="btn btn-sm btn-block btn-primary" type="submit" value="Se connecter">
+              <button type="submit" class="btn btn-primary btn-sm btn-block mt-2">Se connecter</button> 
               <input type="hidden" name="next" value="{{ next }}">
-              <p><a href="{% url 'password_reset' %}">Mot de passe oublié ?</a></p>
+              <p class="mt-3"><a  href="{% url 'password_reset' %}">Mot de passe oublié ?</a></p>
             </form>
 
             {# Assumes you setup the password_reset view in your URLconf #}
