--- a/templates/login.html
+++ b/templates/login.html
@@ -52,7 +52,12 @@
 
               <button type="submit" class="btn btn-primary btn-sm btn-block mt-2">Se connecter</button> 
               <input type="hidden" name="next" value="{{ next }}">
-              <p class="mt-3"><a  href="{% url 'password_reset' %}">Mot de passe oublié ?</a></p>
+              
+              <div class="d-flex justify-content-between mt-5"> 
+                <p class="mt-3"><a  href="{% url 'password_reset' %}">Mot de passe oublié ?</a></p>
+                {% comment %} <p class="mt-3"><a  href="{% url 'password_reset' %}">Créer un compte ?</a></p> {% endcomment %}
+              </div>
+              
             </form>
 
             {# Assumes you setup the password_reset view in your URLconf #}
