--- a/templates/main.html
+++ b/templates/main.html
@@ -103,26 +103,26 @@ background-color: #f7f7ff;
 </style>
 {% endblock style %}
 {% block body %}
-<div class="container">
+<div class="container" data-aos="fade-up">
 <div class="row">
     <div class="col-12 col-lg-3">
 		<div class="card">
 			<div class="card-body">
-				<div class="d-grid"> <a href="javascript:;" class="btn btn-primary">+ Add File</a>
+				<div class="d-grid"> <a href="javascript:;" class="btn btn-primary">+ Ajouter un fichier</a>
 				</div>
 				<h5 class="my-3">My Drive</h5>
 				<div class="fm-menu">
-					<div class="list-group list-group-flush"> <a href="javascript:;" class="list-group-item py-1"><i class="bx bx-folder me-2"></i><span>All Files</span></a>
-						<a href="javascript:;" class="list-group-item py-1"><i class="bx bx-devices me-2"></i><span>My Devices</span></a>
-						<a href="javascript:;" class="list-group-item py-1"><i class="bx bx-analyse me-2"></i><span>Recents</span></a>
+					<div class="list-group list-group-flush"> <a href="javascript:;" class="list-group-item py-1"><i class="bx bx-folder me-2"></i><span>Tous les fichiers</span></a>
+						<a href="javascript:;" class="list-group-item py-1"><i class="bx bx-devices me-2"></i><span>Mes appareils</span></a>
+						<a href="javascript:;" class="list-group-item py-1"><i class="bx bx-analyse me-2"></i><span>Récents</span></a>
 						<a href="javascript:;" class="list-group-item py-1"><i class="bx bx-plug me-2"></i><span>Important</span></a>
-						<a href="javascript:;" class="list-group-item py-1"><i class="bx bx-trash-alt me-2"></i><span>Deleted Files</span></a>
+						<a href="javascript:;" class="list-group-item py-1"><i class="bx bx-trash-alt me-2"></i><span>Corbeille</span></a>
 						<a href="javascript:;" class="list-group-item py-1"><i class="bx bx-file me-2"></i>
                     <span>Documents</span></a>
 						<a href="javascript:;" class="list-group-item py-1"><i class="bx bx-image me-2"></i><span>Images</span></a>
-						<a href="javascript:;" class="list-group-item py-1"><i class="bx bx-video me-2"></i><span>Videos</span></a>
-						<a href="javascript:;" class="list-group-item py-1"><i class="bx bx-music me-2"></i><span>Audio</span></a>
-						<a href="javascript:;" class="list-group-item py-1"><i class="bx bx-beer me-2"></i><span>Zip Files</span></a>
+						<a href="javascript:;" class="list-group-item py-1"><i class="bx bx-video me-2"></i><span>Vidéos</span></a>
+						<a href="javascript:;" class="list-group-item py-1"><i class="bx bx-music me-2"></i><span>Audios</span></a>
+						<a href="javascript:;" class="list-group-item py-1"><i class="bx bx-beer me-2"></i><span>Archives</span></a>
 					</div>
 				</div>
 			</div>
@@ -130,7 +130,7 @@ background-color: #f7f7ff;
 		<div class="card">
 			<div class="card-body">
 				<h5 class="mb-0 text-primary font-weight-bold">45.5 GB <span class="float-end text-secondary">50 GB</span></h5>
-				<p class="mb-0 mt-2"><span class="text-secondary">Used</span><span class="float-end text-primary">Upgrade</span>
+				<p class="mb-0 mt-2"><span class="text-secondary">Utilisés</span><span class="float-end text-primary"> Mettre à jour</span>
 				</p>
 				<div class="progress mt-3" style="height:7px;">
 					<div class="progress-bar" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
@@ -143,7 +143,7 @@ background-color: #f7f7ff;
 					</div>
 					<div class="flex-grow-1 ms-2">
 						<h6 class="mb-0">Images</h6>
-						<p class="mb-0 text-secondary">1,756 files</p>
+						<p class="mb-0 text-secondary">1,756 fichiers</p>
 					</div>
 					<h6 class="text-primary mb-0">15.3 GB</h6>
 				</div>
@@ -152,7 +152,7 @@ background-color: #f7f7ff;
 					</div>
 					<div class="flex-grow-1 ms-2">
 						<h6 class="mb-0">Documents</h6>
-						<p class="mb-0 text-secondary">123 files</p>
+						<p class="mb-0 text-secondary">123 fichiers</p>
 					</div>
 					<h6 class="text-primary mb-0">256 MB</h6>
 				</div>
@@ -160,8 +160,8 @@ background-color: #f7f7ff;
 					<div class="fm-file-box bg-light-danger text-danger"><i class="bx bx-video"></i>
 					</div>
 					<div class="flex-grow-1 ms-2">
-						<h6 class="mb-0">Media Files</h6>
-						<p class="mb-0 text-secondary">24 files</p>
+						<h6 class="mb-0">Media fichiers</h6>
+						<p class="mb-0 text-secondary">24 fichiers</p>
 					</div>
 					<h6 class="text-primary mb-0">3.4 GB</h6>
 				</div>
@@ -169,8 +169,8 @@ background-color: #f7f7ff;
 					<div class="fm-file-box bg-light-warning text-warning"><i class="bx bx-image"></i>
 					</div>
 					<div class="flex-grow-1 ms-2">
-						<h6 class="mb-0">Other Files</h6>
-						<p class="mb-0 text-secondary">458 files</p>
+						<h6 class="mb-0">Other fichiers</h6>
+						<p class="mb-0 text-secondary">458 fichiers</p>
 					</div>
 					<h6 class="text-primary mb-0">3 GB</h6>
 				</div>
@@ -178,8 +178,8 @@ background-color: #f7f7ff;
 					<div class="fm-file-box bg-light-info text-info"><i class="bx bx-image"></i>
 					</div>
 					<div class="flex-grow-1 ms-2">
-						<h6 class="mb-0">Unknown Files</h6>
-						<p class="mb-0 text-secondary">57 files</p>
+						<h6 class="mb-0">Unknown fichiers</h6>
+						<p class="mb-0 text-secondary">57 fichiers</p>
 					</div>
 					<h6 class="text-primary mb-0">178 GB</h6>
 				</div>
@@ -268,7 +268,7 @@ background-color: #f7f7ff;
 									<div class="user-plus">+</div>
 								</div>
 								<h6 class="mb-0 text-primary">Analytics</h6>
-								<small>15 files</small>
+								<small>15 fichiers</small>
 							</div>
 						</div>
 					</div>
@@ -283,7 +283,7 @@ background-color: #f7f7ff;
 									</div>
 								</div>
 								<h6 class="mb-0 text-primary">Assets</h6>
-								<small>345 files</small>
+								<small>345 fichiers</small>
 							</div>
 						</div>
 					</div>
@@ -299,7 +299,7 @@ background-color: #f7f7ff;
 									</div>
 								</div>
 								<h6 class="mb-0 text-primary">Marketing</h6>
-								<small>143 files</small>
+								<small>143 fichiers</small>
 							</div>
 						</div>
 					</div>
@@ -307,24 +307,27 @@ background-color: #f7f7ff;
 				<!--end row-->
 				<div class="d-flex align-items-center">
 					<div>
-						<h5 class="mb-0">Recent Files</h5>
+						<h5 class="mb-0">Fichiers Récents</h5>
 					</div>
-					<div class="ms-auto"><a href="javascript:;" class="btn btn-sm btn-outline-secondary">View all</a>
+					<div class="ms-auto"><a href="javascript:;" class="btn btn-sm btn-outline-secondary">Tout voir</a>
 					</div>
 				</div>
 				<div class="table-responsive mt-3">
 					<table class="table table-striped table-hover table-sm mb-0">
 						<thead>
 							<tr>
-								<th>Name <i class="bx bx-up-arrow-alt ms-2"></i>
+								<th>*</th>
+								<th>Nom <i class="bx bx-up-arrow-alt ms-2"></i>
 								</th>
-								<th>Members</th>
-								<th>Last Modified</th>
-								<th></th>
+								<th>Membres</th>
+								<th>Dernière modification</th>
+								<th>Option</th>
 							</tr>
 						</thead>
 						<tbody>
+						 
 							<tr>
+								<td></td>
 								<td>
 									<div class="d-flex align-items-center">
 										<div><i class="bx bxs-file-pdf me-2 font-24 text-danger"></i>
@@ -338,6 +341,7 @@ background-color: #f7f7ff;
 								</td>
 							</tr>
 							<tr>
+								<td></td>
 								<td>
 									<div class="d-flex align-items-center">
 										<div><i class="bx bxs-file me-2 font-24 text-primary"></i>
@@ -351,6 +355,7 @@ background-color: #f7f7ff;
 								</td>
 							</tr>
 							<tr>
+								<td></td>
 								<td>
 									<div class="d-flex align-items-center">
 										<div><i class="bx bxs-file me-2 font-24 text-primary"></i>
@@ -364,6 +369,7 @@ background-color: #f7f7ff;
 								</td>
 							</tr>
 							<tr>
+								<td></td>
 								<td>
 									<div class="d-flex align-items-center">
 										<div><i class="bx bxs-file-pdf me-2 font-24 text-danger"></i>
@@ -377,6 +383,7 @@ background-color: #f7f7ff;
 								</td>
 							</tr>
 							<tr>
+								<td></td>
 								<td>
 									<div class="d-flex align-items-center">
 										<div><i class="bx bxs-file me-2 font-24 text-primary"></i>
@@ -390,6 +397,7 @@ background-color: #f7f7ff;
 								</td>
 							</tr>
 							<tr>
+								<td></td>
 								<td>
 									<div class="d-flex align-items-center">
 										<div><i class="bx bxs-file-doc me-2 font-24 text-success"></i>
@@ -402,7 +410,8 @@ background-color: #f7f7ff;
 								<td><i class="fa fa-ellipsis-h font-24"></i>
 								</td>
 							</tr>
-							<tr>
+							<tr>	
+								<td></td>
 								<td>
 									<div class="d-flex align-items-center">
 										<div><i class="bx bxs-file me-2 font-24 text-primary"></i>
@@ -416,6 +425,7 @@ background-color: #f7f7ff;
 								</td>
 							</tr>
 							<tr>
+								<td></td>
 								<td>
 									<div class="d-flex align-items-center">
 										<div><i class="bx bxs-file me-2 font-24 text-primary"></i>
@@ -429,6 +439,7 @@ background-color: #f7f7ff;
 								</td>
 							</tr>
 							<tr>
+								<td></td>
 								<td>
 									<div class="d-flex align-items-center">
 										<div><i class="bx bxs-file-doc me-2 font-24 text-success"></i>
