user & cloud models forms

--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@
             <li><a class="getstarted scrollto" href="{% url 'user:profile' %}">{{user.username}}</a></li>
             <li><a class="getstarted scrollto" href="{% url 'user:logout' %}">Se déconnecter</a></li>
           {% else %}
-            <li><a class="getstarted scrollto" href="{% url 'user:login' %}">Se onnecter</a></li> 
+            <li><a class="getstarted scrollto" href="{% url 'user:login' %}">Se connecter</a></li> 
             {% endif %}
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
